--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
 
 html,
 body {
@@ -17,4 +18,91 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.mainTitle {
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
+    "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
+    "Malgun Gothic", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0%;
+  line-height: 120%;
+  font-size: 34px;
+  margin: 0;
+}
+
+.mainSubTitle {
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
+    "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
+    "Malgun Gothic", sans-serif;
+  font-weight: 500;
+  letter-spacing: -0.5%;
+  line-height: 150%;
+  font-size: 15px;
+  margin: 0;
+}
+
+.contentTitle {
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
+    "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
+    "Malgun Gothic", sans-serif;
+  font-weight: 500;
+  letter-spacing: 0%;
+  font-size: 20px;
+  margin: 0;
+}
+
+.contentSubTitle {
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
+    "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
+    "Malgun Gothic", sans-serif;
+  font-weight: 300;
+  letter-spacing: 0%;
+  font-size: 14px;
+  margin: 0;
+}
+
+.contentText {
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
+    "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
+    "Malgun Gothic", sans-serif;
+  font-weight: 200;
+  letter-spacing: -4%;
+  font-size: 11px;
+  margin: 0;
+}
+
+.contentSubText {
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
+    "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
+    "Malgun Gothic", sans-serif;
+  font-weight: 300;
+  letter-spacing: -4%;
+  font-size: 10px;
+  margin: 0;
+}
+
+.contentFooter {
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
+    "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
+    "Malgun Gothic", sans-serif;
+  font-weight: 100;
+  letter-spacing: -4%;
+  font-size: 10px;
+  margin: 0;
+}
+
+.fontColor707070 {
+  color: #707070;
+}
+.fontColor505050 {
+  color: #505050;
+}
+
+.fontColorD0D0D0 {
+  color: #d0d0d0;
+}
+
+.fontColor222222 {
+  color: #222222;
 }
