--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,16 @@ a {
   margin: 0;
 }
 
+.contentChartTitle {
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
+    "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
+    "Malgun Gothic", sans-serif;
+  font-weight: 500;
+  letter-spacing: -4%;
+  font-size: 14px;
+  margin: 0;
+}
+
 .contentText {
   font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
     "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
